<resources>
  <!-- All screens -->
  <string name="add">+</string>
  <string name="apply">Применить</string>
  <string name="edit">Редактировать</string>
  <string name="delete">Удалить</string>
  <string name="rename">Переименовать</string>
  <string name="start">Запустить</string>
  <string name="stop">Остановить</string>
  <string name="finish">Завершить</string>
  <string name="cancel">Отменить</string>
  <string name="ok">OK</string>

  <!-- Main screen -->
  <string name="no_journey">Нет приключений</string>
  <string name="no_journey_description">Создайте свое первое приключение</string>
  <string name="journey_title">Имя приключения</string>
  <string name="journey_theme">Референс</string>
  <string name="journey_time">Временной отрезок в мире</string>
  <string name="journey_restrictions">Временной отрезок в мире</string>

  <!-- Edit journey screen -->
  <string name="journey_edit_title">Редактор приключения</string>
  <string name="journey_edit_placeholder_name">Название приключения</string>
  <string name="journey_edit_placeholder_theme">Тема приключения</string>
  <string name="journey_edit_placeholder_timestamp">Временной отрезок</string>
  <string name="journey_edit_placeholder_restrictions">Ограничения, за которые не следует выходить</string>

  <!-- journey acts -->
  <string name="act_number_1">Обыденный мир</string>
  <string name="act_number_1_description">Обыденный мир</string>

  <string name="act_number_2">Зов к странствиям</string>
  <string name="act_number_2_description">Зов к странствиям</string>

  <string name="act_number_3">Отвержение зова</string>
  <string name="act_number_3_description">Отвержение зова</string>

  <string name="act_number_4">Встреча с наставником</string>
  <string name="act_number_4_description">Встреча с наставником</string>

  <string name="act_number_5">Преодаление первого порога</string>
  <string name="act_number_5_description">Преодаление первого порога</string>

  <string name="act_number_6">Испытания, союзники и враги</string>
  <string name="act_number_6_description">Испытания, союзники и враги</string>

  <string name="act_number_7">Приближение с сокрытой пещере</string>
  <string name="act_number_7_description">Приближение с сокрытой пещере</string>

  <string name="act_number_8">Главное испытание</string>
  <string name="act_number_8_description">Главное испытание</string>

  <string name="act_number_9">Награда</string>
  <string name="act_number_9_description">Награда</string>

  <string name="act_number_10">Обратный путь</string>
  <string name="act_number_10_description">Обратный путь</string>

  <string name="act_number_11">Возрождение (Кульминация)</string>
  <string name="act_number_11_description">Возрождение (Кульминация)</string>

  <string name="act_number_12">Возвращение с эликсиром</string>
  <string name="act_number_12_description">Возвращение с эликсиром</string>

  <string name="ui_text">text-component-fragment</string>

  <!-- journey -->
  <string name="journey_list_name">Список приключений</string>
  <string name="journey_name">Название приключения</string>
  <string name="journey_description">Краткое описания приключения</string>
  <string name="journey_create_title">Создать приключение</string>
  <string name="journey_update_title">Изменить имя приключения</string>

  <!-- PlotLine -->
  <string name="plots_list_name">Список сюжетных линий</string>
  <string name="plots_name">Название сюжетной линии</string>
  <string name="plots_description">Краткое описания сюжетной линии</string>
  <string name="plots_create_title">Создать сюжетную линию</string>
  <string name="plots_update_title">Изменить сюжетную линию</string>

  <!-- keyPoint -->
  <string name="goal_list">Список ключевых точек</string>
  <string name="goal_name">Имя ключевой точки</string>
  <string name="goal_description">Описание ключевой точки</string>
  <string name="goal_create_popup_title">Создать ключевую точку</string>
  <string name="goal_popup_update_title">Изменить имя ключевой точки</string>
  <string name="goal_title">Ключевая точка</string>
  <string name="goal_create_title">Создать ключевую точку</string>
  <string name="goal_assigned_location_placeholder">Укажите локацию…</string>

  <string name="screen_intro">I</string>
  <string name="screen_intro_tip">I. Вступление. Первое испытание, или открытие, которое предваряет само приключение </string>

  <string name="screen_puzzle">II</string>
  <string name="screen_puzzle_intro">II. Ролевое испытание. Возможность для игроков поиграть в социалку, разгадать тайну</string>

  <string name="screen_plot_twist">III</string>
  <string name="screen_plot_twist_tip">III. Сюжетный поворот. Ложный след в приключении, когда игроки понимают что та цель к которой они двигались, ошибочна и теперь они четко видят, что действительно скрывалось за событиями</string>

  <string name="screen_main_challenge">IV</string>
  <string name="screen_main_challenge_tip">IV. Главная битва, кульминация. Главное событие к которому стремились игроки(убить главного гада, освободить принцессу и т.д)</string>

  <string name="screen_call_second_deep">V</string>
  <string name="screen_call_second_deep_tip">V. Открытый конец. Заключительный этап приключения, который не дает поставить в нем точку. Например что главный злодей был сдерживающим фактором над еще большим злом </string>


  <string name="screen_steps">События сцены</string>
  <string name="screen_events_progress">События сцены</string>


  <!-- settings -->
  <string name="app_name">Помошник настольщика</string>
  <string name="action_settings">Загрузить музыку</string>
  <string name="abilities_settings">Характеристики</string>
  <string name="add_setting_dialog_caption">Создать запись</string>
  <string name="update_setting_dialog_caption">Обновить запись</string>
  <string name="screen_name_music">Музыка</string>
  <string name="background_music">Фоновая музыка</string>
  <string name="library_music">Фоновая музыка</string>
  <string name="screen_name_facts">Факты и Мифы</string>
  <string name="screen_settings_default_caption">Настройки</string>
  <string name="advantages">Преимущества</string>
  <string name="disadvantages">Слабости</string>
  <string name="goals">Ключевая точка</string>
  <string name="goal_in_progress">Ключевая точка активна</string>
  <string name="goal_failed">Ключевая точка провалена</string>
  <string name="goal_complete">Ключевая точка достигнута</string>
  <string name="goal_meta">Обзор</string>


  <!-- location -->
  <string name="location">Локация</string>
  <string name="locations_list">Список локаций</string>
  <string name="location_name">Имя локации</string>
  <string name="location_description">Описание локации</string>
  <string name="location_tab_meta">Обзор</string>
  <string name="location_tab_edit">Редактирование</string>
  <string name="location_tab_media">Музыка</string>
  <string name="location_tab_effects">Эффекты</string>
  <string name="location_tab_goals">Цели</string>
  <string name="event_create_title">Создать локацию</string>
  <string name="event_update_title">Изменить локацию</string>
  <string name="event_update_media_title">Сохранить звуки локации</string>

  <!-- npc -->
  <string name="npc_name">Имя</string>
  <string name="npc_tab_meta">Обзор</string>
  <string name="npc_tab_effects">Эффекты</string>
  <string name="npc_age">Возраст</string>
  <string name="npc_character">Характер</string>
  <string name="npc_relationship">Отношение к игрокам</string>
  <string name="npc_background">Предистория</string>
  <string name="npc_goals">Цели</string>
  <string name="npc_list_caption">Список NPC</string>
  <string name="npc_new_npc">Создать нового NPC</string>
  <string name="npc_update_name_npc">Изменить имя NPC</string>

  <!-- dialogs -->
  <string name="dialog_resolve">Применить</string>
  <string name="dialog_reject">Отменить</string>
  <string name="dialog_remove_source_files">Копирование завершено. Удалить выбранные файлы источника?</string>
  <string name="dialog_edit_source_file">Редактировать имя файла</string>

  <!-- files -->
  <string name="audio_files_caption">Библиотека аудио файлов</string>
  <string name="audio_files_empty_list">Нет списка для воспроизведения</string>
  <string name="images_files_caption">Библиотека изображений</string>
  <string name="add_files">Добавить медиа файлы</string>

  <string name="caption">Заголовок</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>


  <string name="location_popup_setting">Список локаций</string>
  <string name="npc_popup_setting">Список персонажей</string>
  <string name="sounds_popup_setting">Библиотека звуков</string>
  <string name="create_popup_setting">Создать</string>
  <string name="update_popup_setting">Изменить</string>

</resources>
