<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              tools:context=".locations.tabs.LocationTabs"
  >

  <com.google.android.material.tabs.TabLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/LOCATION_FRAGMENT_TABS_ID">

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/location_tab_meta"
      android:id="@+id/LOCATION_META_TAB_ID"/>

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/location_tab_media"
      android:id="@+id/LOCATION_PLAYLIST_TAB_ID"/>

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/LOCATION_EFFECTS_TAB_ID"
      android:text="@string/location_tab_effects"/>

  </com.google.android.material.tabs.TabLayout>
</LinearLayout>