<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".plotLine.PlotLinePage">

  <fragment
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:name="com.masterhelper.ux.components.library.appBar.ComponentUIAppBar"
    android:id="@+id/fragment"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout="@layout/fragment_component_ui_app_bar"
    app:layout_constraintTop_toTopOf="parent"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    app:layout_constraintTop_toBottomOf="@+id/fragment">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:text="@string/screen_intro_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
          android:text="CheckBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_I_PLOT_POINT_CHECK_ID"
          android:layout_weight="1"/>

        <ImageButton
          android:src="@mipmap/pencil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_I_PLOT_POINT_BTN_ID"
          android:layout_weight="0"/>
      </LinearLayout>

      <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:backgroundTint="#622D2D"/>

      <TextView
        android:text="@string/screen_puzzle_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
          android:text="CheckBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_II_PLOT_POINT_CHECK_ID"
          android:layout_weight="1"/>

        <ImageButton
          android:src="@mipmap/pencil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_II_PLOT_POINT_BTN_ID"
          android:layout_weight="0"/>

      </LinearLayout>

      <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:backgroundTint="#622D2D"/>

      <TextView
        android:text="@string/screen_plot_twist_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
          android:text="CheckBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_III_PLOT_POINT_CHECK_ID"
          android:layout_weight="1"/>

        <ImageButton
          android:src="@mipmap/pencil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_III_PLOT_POINT_BTN_ID"
          android:layout_weight="0"/>

      </LinearLayout>

      <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:backgroundTint="#622D2D"/>

      <TextView
        android:text="@string/screen_main_challenge_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
          android:text="CheckBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_IV_PLOT_POINT_CHECK_ID"
          android:layout_weight="1"/>

        <ImageButton
          android:src="@mipmap/pencil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_IV_PLOT_POINT_BTN_ID"
          android:layout_weight="0"/>

      </LinearLayout>

      <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:backgroundTint="#622D2D"/>

      <TextView
        android:text="@string/screen_call_second_deep_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
          android:text="CheckBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_V_PLOT_POINT_CHECK_ID"
          android:layout_weight="1"/>

        <ImageButton
          android:src="@mipmap/pencil"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/ACT_V_PLOT_POINT_BTN_ID"
          android:layout_weight="0"/>

      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>