<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".goals.PageGoal">

  <fragment
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:name="com.masterhelper.ux.components.library.appBar.ComponentUIAppBar"
    android:id="@+id/GOAL_APP_BAR"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout="@layout/fragment_component_ui_app_bar"
    app:layout_constraintEnd_toEndOf="parent"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/GOAL_TABS_BAR_ID"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:id="@+id/GOAL_EDIT_CONTAINER_ID">

      <TextView
        android:text="@string/goal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"/>

      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textPersonName"
        android:ems="10"
        android:id="@+id/GOAL_EDIT_NAME_FIELD_ID"/>

      <TextView
        android:text="@string/goal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="8dp"/>

      <MultiAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GOAL_EDIT_DESCRIPTION_FIELD_ID"/>

    </LinearLayout>
  </ScrollView>

  <com.google.android.material.tabs.TabLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/GOAL_TABS_BAR_ID"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/GOAL_APP_BAR">

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/goal_meta"/>

    <com.google.android.material.tabs.TabItem
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:icon="@mipmap/pencil"/>

  </com.google.android.material.tabs.TabLayout>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/GOAL_TABS_BAR_ID"
    android:id="@+id/GOAL_VIEW_CONTAINER_ID"
    android:visibility="visible"
    android:layout_marginTop="8dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GOAL_DESCRIPTION_ID"/>

    </LinearLayout>
  </ScrollView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:srcCompat="@mipmap/done"
    android:id="@+id/GOAL_APPLY_BTN"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>